✏️ Fix header spacing on different viewports

--- a/assets/styles/inc/modules/_header.scss
+++ b/assets/styles/inc/modules/_header.scss
@@ -189,11 +189,16 @@
 %has-image {
 	@include medium {
 		margin-bottom: 8rem;
+		padding-bottom: calc(1 / 2 * 100%);
+	}
+
+	@include large {
+		padding-bottom: calc(1 / 3 * 100%);
 	}
 
 	height: 0;
 	margin-bottom: 4rem;
-	padding-bottom: calc(1 / 3 * 100%);
+	padding-bottom: 100%;
 	position: relative;
 
 	.inner {
